# ZZZ

./: README.md
critto-satto/: .gitignore  CMakeLists.txt  DebPack.cmake  Notes.txt  README.md  TODO.md
critto-satto/src/: CMakeLists.txt  critto_satto.cpp  critto_satto.h  data.cpp  data.h  function.h  macchina_antani.h  macchina_antani_impl.h  main.cpp  utils.cpp  utils.h
critto-satto/tests/: have_to_fail.sh  have_to_pass.sh
critto-satto/utils/: decode.py
libwork/: .gitignore  CMakeLists.txt  DebPack.cmake  README.md
libwork/INSTALL/: FindWork.cmake  libwork.pc.in
libwork/src/: CMakeLists.txt  ranges.h  ranges_const.h  work.cpp  workers.h
popper/: CMakeLists.txt  DebPack.cmake  README.md  TODO.md  config.h.in  example.conf
popper/DEBIAN/: perm.cmake  postinst.cmake
popper/scripts/: passgen.py  popperd
popper/src/: CMakeLists.txt  caller.cpp  caller.h  client.cpp  client.h  config.cpp  config.h  global.h  lockio.cpp  lockio.h  maincli.cpp  mainsrv.cpp  server.cpp  server.h
qtracker/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtracker.pro
renzie/: CMakeLists.txt  DebPack.cmake  README.md  config.h.in
renzie/src/: CMakeLists.txt  main.cpp
string-matcher/: CMakeLists.txt  Compiler.cmake  DebPack.cmake  README.md
string-matcher/src/: CMakeLists.txt  algos.h  compute.cpp  compute.h  dircrap.cpp  dircrap.h  main.cpp
